# index.js
@@ -27,94 +27,6 @@ require("express-async-errors");
 const { dbConnection } = require("./src/configs/dbConnection");
 dbConnection();
 
-/* ------------------------------------------------------- */
-//* MORGAN LOGGING
-// https://expressjs.com/en/resources/middleware/morgan.html
-// https://github.com/expressjs/morgan
-//? npm i morgan
-
-// const morgan = require("morgan");
-
-// app.use(morgan("combined"))
-// app.use(morgan("common"))
-// app.use(morgan("dev"))
-// app.use(morgan("short"))
-// app.use(morgan("tiny"))
-// app.use(morgan('IP=:remote-addr - :remote-user | TIME=[:date[clf]] | "METHOD=:method | URL=:url | HTTP/:http-version" | STATUS=:status | LENGTH=:res[content-length] |  REF=":referrer" | AGENT=":user-agent"'))
-
-//! write logs to a file
-// create a write stream (in append mode)
-// const fs = require("node:fs") //* dosya işlemleri için built-in module
-// var accessLogStream = fs.createWriteStream("./access.log", { flags: 'a+' })
-
-// setup the logger
-// app.use(morgan('combined', { stream: accessLogStream }))
-// app.use(
-//   morgan("combined", {
-//     stream: fs.createWriteStream("./access.log", { flags: "a+" }),
-//   })
-// );
-//! write logs to a file day by day
-// const fs = require("node:fs");
-
-// const now = new Date().toISOString().split("T")[0]
-// console.log(typeof now, now)
-
-// app.use(
-//   morgan("combined", {
-//     stream: fs.createWriteStream(`./logs/${now}.log`, { flags: "a+" }),
-//   })
-// );
-
-/* 
-
-/* -------------------------------------------------------
-                 Documentation
-------------------------------------------------------- */
-// https://swagger-autogen.github.io/docs/
-// $ npm i swagger-autogen
-// $ npm i swagger-ui-express
-// $ npm i redoc-express
-
-//* JSON
-app.use("/documents/json", (req, res) => {
-  res.sendFile("swagger.json", { root: "." });
-});
-
-//! SWAGGER
-const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("./swagger.json");
-
-app.use(
-  "/documents/swagger",
-  swaggerUi.serve,
-  swaggerUi.setup(swaggerDocument, {
-    swaggerOptions: {
-      persistAuthorization: true,
-    },
-  })
-);
-
-//? REDOC
-const redoc = require("redoc-express");
-app.use(
-  "/documents/redoc",
-  redoc({
-    title: "Personnel API",
-    specUrl: "/documents/json",
-    // path to your OpenAPI definition
-    definition: {
-      openapi: "3.0.0",
-      info: {
-        title: "Personnel API",
-        version: "1.0.0",
-      },
-      // ... other options
-    },
-    // ... other options
-  })
-);
-
 /* -------------------------------------------------------
                  Middlewares
 ------------------------------------------------------- */
@@ -132,19 +44,19 @@ app.use(require("./src/middlewares/authentication"));
                  Routes
 ------------------------------------------------------- */
 app.all("/", (req, res) => {
-  // res.send("Welcome to the Personnel API")
   res.send({
     message: "Welcome to the Personnel API",
     user: req.user,
+    api: {
+      documents: {
+        swagger: "/documents/swagger",
+        redoc: "/documents/redoc",
+        json: "/documents/json",
+      },
+    },
   });
 });
-// console.log("6683ba578d99e1bf783db512" + Date.now());
 
-// app.use("/departments", require("./src/routes/department.router"));
-// app.use("/personnels", require("./src/routes/personnel.router"));
-// app.use("/tokens", require("./src/routes/token.router"));
-
-// app.use(require("./src/routes/index"));
 app.use(require("./src/routes/"));
 
 //* eslesmeyen routelari yakalar => Not Found sayfasi
